##Text encoding: utf-8

2009-08-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: some work on charges.
	* libs/gcu/crystaldoc.cc: start work on cif export.
	* libs/gcu/crystaldoc.h: ditto.
	* plugins/loaders/cif/cif.cc: ditto.
	* programs/crystal/application.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.

2009-08-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: fix runs evaluation.
	* libs/gcp/fragment.cc: automatic stoichiometry coefficients reimplemented.
	* plugins/paint/text/fragmenttool.cc: don't automatically change the current
	mode to StoichiometryMode or ChargeMode.
	* programs/crystal/document.cc: fixed unneeded warnings and error messages.

2009-08-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: enhanced bond drawing near symbols and clean out white
	rectangles.
	* libs/gcp/fragment.cc: fix horizontal position.
	* libs/gcp/fragment.h: use double for left bearing.
	* libs/gcu/transform3d.cc: add missing const.
	* libs/gcu/transform3d.h: ditto.
	* plugins/paint/wikipedia/wikipediatool.cc: start exporting png files again.

2009-08-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: make underline and strikethrough work again.
	* libs/gcu/crystalatom.cc: partly implement space group sniffing.
	* libs/gcu/crystalatom.h: ditto.
	* libs/gcu/crystaldoc.cc: ditto.
	* libs/gcu/crystaldoc.h: ditto.
	* libs/gcu/spacegroup.cc: ditto.
	* libs/gcu/spacegroup.h: ditto.
	* plugins/loaders/cdx/cdx.cc: fix a test.
	* plugins/loaders/cif/cif.cc: remove unuseful code.
	* plugins/loaders/cml/cml.cc: enhance the <scalar/> node support.
	* programs/crystal/application.cc: do not write cml and cif files for now.
	* programs/crystal/document.h: removed the ReadOnly property (moved to
	gcu::CrystalDoc class).

2009-07-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: fix y for lines.